[gd_scene load_steps=21 format=1]

[ext_resource path="res://script/Effect_Ulty_2.gd" type="Script" id=1]
[ext_resource path="res://image/umbrella_1.tex" type="Texture" id=2]
[ext_resource path="res://image/umbrella_2.tex" type="Texture" id=3]
[ext_resource path="res://image/umbrella_3.tex" type="Texture" id=4]
[ext_resource path="res://image/umbrella_4.tex" type="Texture" id=5]
[ext_resource path="res://image/umbrella_5.tex" type="Texture" id=6]
[ext_resource path="res://image/umbrella_6.tex" type="Texture" id=7]
[ext_resource path="res://image/umbrella_7.tex" type="Texture" id=8]
[ext_resource path="res://image/umbrella_10.tex" type="Texture" id=9]
[ext_resource path="res://image/umbrella_11.tex" type="Texture" id=10]
[ext_resource path="res://image/umbrella_8.tex" type="Texture" id=11]
[ext_resource path="res://image/umbrella_9.tex" type="Texture" id=12]
[ext_resource path="res://sound/umbrella_wooshes.wav" type="Sample" id=13]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -53.1998, -108.819, -23.2306, -120.693, -15.3143, -101.468, -14.7488, -83.9388, -78.0798, -91.8551 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( -13.0525, 94.1797, -11.9215, 119.06, -21.5343, 138.285, -53.7652, 123.583, -87.1271, 98.1378 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( -13.0525, 37.0687, -7.96335, 65.9069, -13.0525, 94.1797, -87.1271, 98.1378, -108.614, 69.2996, -122.185, 37.0687 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( -11.9215, -17.215, -7.96335, 7.09953, -13.0525, 37.0687, -122.185, 37.0687, -130.102, 5.96861, -117.096, -37.5714, -100.698, -69.2369 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( -9.65973, -57.9278, -11.9215, -17.215, -100.698, -69.2369, -78.0798, -91.8551, -14.7488, -83.9388 )

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "rotate",
"speed": 20.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "shooo",
"speed": 15.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 9 ) ],
"loop": false,
"name": "pop_up",
"speed": 30.0
} ]

[sub_resource type="SampleLibrary" id=7]

samples/umbrella_wooshes = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}

[node name="Umbrella_effect" type="RigidBody2D"]

transform/pos = Vector2( 619.296, 180.823 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.3, 0, 0, 1.3, 39.6949, -1.47018 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1.3, 0, 0, 1.3, 39.6949, -1.47018 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1.3, 0, 0, 1.3, 39.6949, -1.47018 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 4 )
shapes/3/transform = Matrix32( 1.3, 0, 0, 1.3, 39.6949, -1.47018 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 5 )
shapes/4/transform = Matrix32( 1.3, 0, 0, 1.3, 39.6949, -1.47018 )
shapes/4/trigger = false
collision/layers = 1
collision/mask = 1
mode = 3
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = true
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
SPEED = 200
Y_OFFSET = 40
VIBRATE_RATE = 350

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/scale = Vector2( 1.3, 1.3 )
frames = SubResource( 6 )
animation = "pop_up"
frame = 3
playing = true
flip_h = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( 39.6949, -1.47018 )
transform/scale = Vector2( 1.3, 1.3 )
build_mode = 0
polygon = Vector2Array( -23.2306, -120.693, -53.1998, -108.819, -78.0798, -91.8551, -100.698, -69.2369, -117.096, -37.5714, -130.102, 5.96861, -122.185, 37.0687, -108.614, 69.2996, -87.1271, 98.1378, -53.7652, 123.583, -21.5343, 138.285, -11.9215, 119.06, -13.0525, 94.1797, -7.96335, 65.9069, -13.0525, 37.0687, -7.96335, 7.09953, -11.9215, -17.215, -9.65973, -57.9278, -14.7488, -83.9388, -15.3143, -101.468 )
shape_range = Vector2( 0, 4 )
trigger = false

[node name="Interval_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="To_move_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.01
one_shot = true
autostart = false

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 7 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_finished"]

[connection signal="timeout" from="Interval_timer" to="." method="_on_Interval_timer_timeout"]

[connection signal="timeout" from="To_move_timer" to="." method="_on_To_move_timer_timeout"]


